--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCKTYPE html>
-  <html>
+  <html>\
+    <head>
  <title>Site</title>
-  </html>
+    </head>  
   <body>
     <h1>Welcome!</h1>
    </body>
