--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hello!<title>
+<title>Hello!</title>
 </head>
 <body>
 <center><h1>😀Hello!!!😀</h1></center>
