--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <center><h1>😀Hello!!!😀</h1></center>
+<center><p>Hello! This is Elijah James Putnam, C.E.O OF MediaApe. For all his gadgets, nic-naks, and good old fashioned Bells. (No whitsles allowed)</p></center>
 </bosy>
 </html>
