--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hello!</title>
-</head>
-<body>
-<center><h1>😀Hello!!!😀</h1></center>
-<center><p>Hello! This is Elijah, C.E.O OF MediaApe. For all his gadgets, nic-naks, and good old fashioned Bells. (No whitsles allowed)</p></center>
-</bosy>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+            <title>Hello!</title>
+    </head>
+    <body>
+        <center><h1>😀Hello!!!😀</h1></center>
+            <center><p>Hello! This is Elijah, C.E.O OF MediaApe. For all his gadgets, nic-naks, and good old fashioned Bells. (No whitsles allowed)</p></center>
+    </body>
 </html>
