--- a/images/awesome.html
+++ b/images/awesome.html
@@ -4,6 +4,6 @@
         <title>Awesome drawing</title>
     </head>
     <body>
-        <center><img src="lgsmartfirdge.png"></img></center>
+        <center><img src="lgsmartfirdge"></img></center>
     </body>
 </html>
