--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"></link>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <script src="main.js"></script>
